Add different type of list(order,unorder,description)

--- a/index.html
+++ b/index.html
@@ -62,6 +62,25 @@
       <li><p>Be kind</p></li>
     </ul>
     <hr />
+
+    <h2>Description List</h2>
+
+    <dl>
+      <dt>Cuttack</dt>
+      <dd>Famous for dahibara</dd>
+
+      <dt>Hyderbad</dt>
+      <dd>Famous for biryani</dd>
+
+      <dt>Delhi</dt>
+      <dd>Famous for chat</dd>
+    </dl>
+
+
+
+
+
+
     <p>&lt;&lt;&lt;&copy;Nikhil Mohanty&gt;&gt;&gt;</p>
   </body>
 
