Add link to web page

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <!-- ?Heading related Stuff -->
     <hr />
     <h1>Hey Welcome to the First Web Page</h1>
+    
     <p>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui nemo rerum
       voluptates nihil, exercitationem architecto placeat excepturi quidem.
@@ -46,44 +47,11 @@
       Cuttack,Odhisa,India
     </address>
 
-    <hr>
-
-    <!-- !List Items -->
-    <h2>Order List</h2>
-    <h3>Daily Routine</h3>
-    <ol>
-      <li>Medidation</li>
-      <li>Workout</li>
-      <li>Study</li>
-    </ol>
-
-    <h2>Unorder List</h2>
-    <ul>
-      <li><p>Eat healthy</p></li>
-      <li><p>Wake up Early</p></li>
-      <li><p>Be kind</p></li>
-    </ul>
-    
-
-    <h2>Description List</h2>
-
-    <dl>
-      <dt>Cuttack</dt>
-      <dd>Famous for dahibara</dd>
-
-      <dt>Hyderbad</dt>
-      <dd>Famous for biryani</dd>
-
-      <dt>Delhi</dt>
-      <dd>Famous for chat</dd>
-    </dl>
-
     <hr />
 
+    <p>Type of <a href="list.html">List</a></p>
 
-
-
-    <p>&lt;&lt;&lt;&copy;Nikhil Mohanty&gt;&gt;&gt;</p>
+    <p>&lt;&lt;&lt;<a href="about.html">&copy;Nikhil Mohanty</a>&gt;&gt;&gt;</p>
   </body>
 
   <!-- Topic i cover
